<!--
  ~ Copyright (c) xjunz 2020.
  -->

<resources>
    <string name="app_name">萌卡YGO观战助手</string>
    <string name="vs">VS</string>
    <string name="loading">加载中</string>
    <string name="unknown">无排名</string>
    <string name="def_notification_title">新的精彩对局!</string>
    <string name="whitelisted_def_notification_title">你关注的%s正在决斗!</string>
    <string name="delayed_notification_title">已开始%d分钟!</string>
    <string name="whitelisted_delayed_notification_title">你关注的%s正在决斗!已开始%d分钟!</string>
    <string name="def_notification_content"><![CDATA[排名<b>%1d</b>的<b>%1s</b> <i>VS</i> 排名<b>%2d</b>的<b>%2s</b>]]></string>
    <string name="player1_unranked_notification_content"><![CDATA[<b>%1s</b> <i>VS</i> 排名<b>%d</b>的<b>%2s</b>]]></string>
    <string name="player2_unranked_notification_content"><![CDATA[排名<b>%d</b>的<b>%1s</b> <i>VS</i> <b>%2s</b>]]></string>
    <string name="unranked_notification_content"><![CDATA[<b>%1s</b> <i>VS</i> <b>%2s</b>]]></string>
    <string name="service_on">监测服务正在运行…</string>
    <string name="service_off">监测服务未运行</string>
    <string name="watch_list">观战列表</string>
    <string name="hint_set_username">您的萌卡用户名</string>
    <string name="hint_pwd">您的密码</string>
    <string name="logining">正在登录…</string>
    <string name="title_login">请登录到萌卡平台</string>
    <string name="msg_input_uncompletely">请输入完整</string>
    <string name="des_login">为了本应用能直接跳转到观战，请先登录到萌卡平台确认您的身份以获取观战授权。</string>
    <string name="monitoring_focused_duels"><b>正在监测精彩对局…</b></string>
    <string name="settings">设置</string>
    <string name="watch_username">观战用户名</string>
    <string name="watch_token">观战Token</string>
    <string name="notification">通知</string>
    <string name="duel_notify_condition">对局推送条件</string>
    <string name="duel_notify_time">对局推送时机</string>
    <string name="network">网络</string>
    <string name="duel_rank_load_timeout">对局双方排名加载超时时长</string>
    <string name="duel_rank_auto_try_times">对局双方排名加载超时自动重试次数</string>
    <string name="ranking_list_load_timeout">决斗排行榜加载超时时长</string>
    <string name="help">帮助</string>
    <string name="basic">基本</string>
    <string name="pls_input">请输入%s</string>
    <string name="username">用户名</string>
    <string name="bracketed_unset"><![CDATA[<未设置>]]></string>
    <string name="push_white_hot">推送白热化对局</string>
    <string name="and">且</string>
    <string name="or">或</string>
    <string name="player_rank_range">玩家%d的排名位于%d到%d之间</string>
    <string name="player_rank_less_than">玩家%d的排名小于等于%d</string>
    <string name="player_rank_larger_than">玩家%d的排名大于等于%d</string>
    <string name="player1_rank">玩家1排名</string>
    <string name="player2_rank">玩家2排名</string>
    <string name="token_over_length">Token长度为8位，请确认您的输入</string>
    <string name="hint_rank">0或空则不设限</string>
    <string name="stop_limit">上限</string>
    <string name="watch">观战</string>
    <string name="rank_list">排行榜</string>
    <string name="refresh">刷新</string>
    <string name="start_limit">下限</string>
    <string name="push_all">全部推送</string>
    <string name="push_minutes_after_duel">对局开始后几分钟推送</string>
    <string name="caption_push">请输入对局开始几分钟后推送，输入0表示对局开始时就推送，一般对局时长在20分钟以内。
        若推送之前对局已结束，则取消推送，因此<b>设置过长的延时可能导致错过推送哦</b>。推荐设置为10分钟，为了测试通知功能能否在您的设备上正常运行，默认延时为0。</string>
    <string name="push_delay_zero">当精彩对局开始时</string>
    <string name="push_delay">当精彩对局开始%d分钟后</string>
    <string name="seconds">%d秒</string>
    <string name="times">%d次</string>
    <string name="no_retry">不重试加载</string>
    <string name="help_whitehot">应用会智能检测可能的白热化精彩对局，如果您有兴趣，请打开此选项。</string>
    <string name="caption_duel_rank_load_timeout">对局双方排名加载成功后，我们才能判断此对局是否符合推送条件。如果加载超时，则可能错过推送。</string>
    <string name="service_reconnected">服务重连成功!</string>
    <string name="service_closed">服务已关闭!</string>
    <string name="monitoring_service_stopped"><b>监测服务已停止</b></string>
    <string name="starting_monitoring_service"><b>正在启动监测服务…</b></string>
    <string name="duel_notify_behaviour">对局通知推送行为</string>
    <string name="notify_in_single_id">替换掉已有通知</string>
    <string name="notify_in_multi_ids">每次新增一条通知</string>
    <string name="reconnect_when_closed_remotely">服务器关闭连接后自动重连</string>
    <string name="help_connect">当客户端连接到服务端较长时间后，服务端可能会断开与客户端的连接。</string>
    <string name="about">关于</string>
    <string name="developer">开发者</string>
    <string name="check_update">检查更新</string>
    <string name="check_sourcecode">查看源代码</string>
    <string name="credit_to">特别鸣谢</string>
    <string name="donate">捐赠</string>
    <string name="feedback">反馈&amp;加入交流群</string>
    <string name="browser_chooser_title">请选择打开方式</string>
    <string name="checking_update">正在检查更新</string>
    <string name="check_update_failed">检查更新失败</string>
    <string name="new_version_available">检测到新版本!</string>
    <string name="new_version_msg">新版本:%s\n更新日志:\n%s\n体积:%s</string>
    <string name="download">下载</string>
    <string name="no_new_version">已是最新版本</string>
    <string name="join_group_failed">加群失败，已复制群号到剪贴板</string>
    <string name="donate_failed">捐赠失败，感谢您的支持。</string>
    <string name="new_white_hot">新的白热化对局!</string>
    <string name="me">xjunz</string>
    <string name="win_rate_separator">胜率|%s</string>
    <string name="load_failed">加载失败</string>
    <string name="msg_load_failed">加载失败:%s</string>
    <string name="start_watch_failed">跳转失败，请先安装YGO Mobile客户端</string>
    <string name="ygo_mobile_not_installed">未安装YGO Mobile</string>
    <string name="share">分享本应用</string>
    <string name="what_if_download_fail">如无法下载，也可加群获取最新版。</string>
    <string name="try_later">请稍后再试</string>
    <string name="help_white_list">对局中只要包含已关注玩家就会被推送</string>
    <string name="whitelist">关注名单</string>
    <string name="edit_whitelist">编辑关注名单</string>
    <string name="hint_whitelist">请输入欲关注玩家名</string>
    <string name="remove">移除</string>
    <string name="add">添加</string>
    <string name="whitelist_duplication">此玩家已存在，勿重复添加</string>
    <string name="import_from_rank_list">从排行榜导入</string>
    <string name="enable_whitelist">启用关注名单</string>
    <string name="pls_select_player_to_import">请选择要导入关注名单的玩家</string>
    <string name="retry">重试</string>
    <string name="duel_started_at">对局开始于%s</string>
    <string name="focused_player">你关注的%s</string>
    <string name="sort">排序</string>
    <string name="sort_configuration">排序配置</string>
    <string name="sort_by">排序依据</string>
    <string name="order_by">排序方式</string>
    <string name="ascending">升序</string>
    <string name="descending">降序</string>
    <string name="apply">应用</string>
    <string name="whitelisted">已关注</string>
    <string name="login">登录</string>
    <string name="login_successfully">登录成功</string>
    <string name="login_failed">账号或密码错误</string>
    <string name="login_error">登录出错</string>
    <string name="pls_wait_for">请%d秒后重试</string>
    <string name="user">用户</string>
    <string-array name="sort_by">
        <item>按时间（默认）</item>
        <item>按DP排名（双方总和）</item>
        <item>按DP排名（双方中较低者）</item>
    </string-array>
    <string name="not_login">未登录</string>
    <string name="already_login">已登录</string>
    <string name="tap_to_login">点击登录</string>
    <string name="log_out">退出登录</string>
    <string name="alert">提示</string>
    <string name="alert_log_out">你确定要退出登录吗?</string>
    <string name="os_projects_used">使用的开源项目</string>
    <string name="mycard_n_ygomobile">萌卡官方(https://mycard.moe)、YGO Mobile</string>
    <string name="logic">逻辑</string>
    <string name="enable_or_not">是否启用</string>
    <string name="ui">界面</string>
    <string name="highlight_pro_players">天梯前一百决斗者名称高亮</string>
    <string name="dp_rank">DP排名</string>
    <string name="dp_value">DP积分</string>
    <string name="win_rate">胜率</string>
    <string name="total_win_lose_draw">总场数/胜/负/平</string>
    <string name="t_w_l_d">%d/%d/%d/%d</string>
    <string name="load">加载</string>
    <string name="add_to_whitelist">加入关注列表</string>
    <string name="msg_whitelisted">已取消关注%s</string>
    <string name="msg_un_whitelisted">已关注%s</string>
    <string name="duel_finished">对局已结束</string>
</resources>