<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) xjunz 2020.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.Html" />

        <import type="xjunz.tool.mycard.App" />
    </data>

    <androidx.core.widget.NestedScrollView
        style="@style/CustomVerticalScrollbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/z_item"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?colorAccent"
                android:elevation="@dimen/z_item">

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="center"
                    android:src="@mipmap/ic_launcher_foreground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@android:color/primary_text_dark"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@{App.getVersionName()}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@android:color/primary_text_dark"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_app_name"
                    app:layout_constraintStart_toEndOf="@+id/tv_app_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selectable"
                android:clickable="true"
                android:elevation="@dimen/z_item"
                android:focusable="true"
                android:onClick="showDeveloper">

                <TextView
                    android:id="@+id/tv_title_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:text="@string/developer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_unit"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:text="@string/me"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_title_developer"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_developer" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    style="@style/Widget.AppCompat.Button.Flat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:elevation="0dp"
                    android:onClick="donate"
                    android:stateListAnimator="@animator/flat_raise"
                    android:text="@string/donate"
                    android:textColor="?android:textColorPrimaryInverse"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selectable"
                android:clickable="true"
                android:elevation="@dimen/z_item"
                android:focusable="true"
                android:onClick="checkUpdate">

                <View
                    android:id="@+id/update_badge"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/bg_fab"
                    android:elevation="@dimen/z_item"
                    android:gone="@{!App.hasUpdate()}"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/tv_title_check_update"
                    app:layout_constraintTop_toTopOf="@+id/tv_title_check_update" />

                <TextView
                    android:id="@+id/tv_title_check_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/check_update"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selectable"
                android:clickable="true"
                android:elevation="@dimen/z_item"
                android:focusable="true"
                android:onClick="viewSource">

                <TextView
                    android:id="@+id/tv_title_check_sourcecode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/check_sourcecode"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_selectable"
                android:clickable="true"
                android:elevation="@dimen/z_item"
                android:focusable="true"
                android:onClick="feedback">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginBottom="16dp"
                    android:text="@string/feedback"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_unit"
                android:layout_marginStart="@dimen/spacing_normal"
                android:text="@string/os_projects_used"
                android:textColor="?colorAccent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_os"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?colorBackgroundFloating"
                android:elevation="@dimen/z_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_os_project" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_unit"
                android:layout_marginStart="@dimen/spacing_normal"
                android:text="@string/credit_to"
                android:textColor="?colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:background="?colorBackgroundFloating"
                android:elevation="@dimen/z_item"
                android:padding="@dimen/spacing_normal"
                android:text="@string/mycard_n_ygomobile"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</layout>